--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -2,3 +2,21 @@
     height:8%;
     border:var(--border);
 }
+.test{
+    width:30px;
+    height:30px;
+    margin-left:10px;
+    background-color:transparent;
+    border:var(--border);
+    backdrop-filter: blur(20px);
+    background-image: linear-gradient(180deg,rgb(255, 255, 255,0.13),rgb(0, 0, 0,0.3));
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: 2px;
+
+}
+.test img{
+    width:15px;
+}
