--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,25 +1,34 @@
 :root {
-  box-sizing: border-box;
-  margin:0;
-  padding:0;
+  font-family: "Geist", serif;
+
 }
-body{
-  margin:0;
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
 }
+
 
 [data-theme="light"] {  
   --accent-color:#50be8e;
   --background:white;
+  --secondary-color:black;
+  --border:1px solid #333333;
   background-color: var(--background);
-  /* --border:1px solid #333333; */
+  color: var(--secondary-color);
 }
 
 [data-theme="dark"] {
   --background:#101014;
-  --accent-color:#50be8e;
-  background-color: var(--background);
-  color: var(--accent-color);
+  --secondary-color:white;
   --border:1px solid #333333;
+  --accent-color:#50be8e;
+  --glass:linear-gradient(180deg,rgb(255, 255, 255,0.13),rgb(0, 0, 0,0.3));
+  background-color: var(--background);
+  color: var(--secondary-color);
 }
 
 .df{
