--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,21 +1,82 @@
 .Navbar{
-    height:8%;
+    height:10%;
     border-bottom:var(--border);
+    padding:15px;
+    box-sizing: border-box;
 }
-.test{
-    width:30px;
-    height:30px;
-    margin-left:10px;
-    background-color:transparent;
-    border:var(--border);
-    backdrop-filter: blur(20px);
-    background-image: linear-gradient(180deg,rgb(255, 255, 255,0.13),rgb(0, 0, 0,0.3));
+
+.currentpath{
+    color:white;
+    /* padding:px; */
+    gap:4px;
+    font-size: 20px;
+}
+
+.home_logo{
+    /* background-color:var(--accent-color); */
+    padding:4px;
     border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: 2px;
 }
-.test img{
+.currentpath .home_logo svg{
+    width:22px;
+}
+.bread_crumb_arrow{
     width:15px;
+}
+
+.bread_crumb_arrow svg path{
+    stroke:var(--secondary-color);
+}
+.breadcrumbs{
+    font-size:20px;
+    color:var(--secondary-color);
+}
+.breadcrumbs a{
+    text-decoration: none;
+    color:var(--accent-color);
+}
+.breadcrumbs a:hover{
+    text-decoration:underline;
+}
+.breadcrumbs svg{
+    width:12px;
+    margin:0 3px;
+}
+
+.user_image_container{
+    width:40px;
+    height:40px;
+    background:var(--glass-reverse);
+    /* padding:3px; */
+    margin-right: 10px;
+    border-radius: 10px;
+    border:1px solid  var(--accent-color);
+}
+.user_image_container img{
+    width:100%;
+    height:100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.user_profile{
+    gap:15px;
+}
+.user_profile svg{
+    width:24px;
+}
+
+.user_details{
+    /* background: var(--glass); */
+    padding:4px;
+    gap:4px;
+    margin-left: 4px;
+    border-radius: 10px;
+}
+.user_name{
+    font-size: 14px;
+    color:var(--secondary-color);
+}
+.user_name span{
+    color:var(--accent-color);
+    font-size: 12px;
 }
