--- a/frontend/src/components/Sidemenu/Sidemenu.css
+++ b/frontend/src/components/Sidemenu/Sidemenu.css
@@ -1,36 +1,47 @@
-.logo{
-    width:calc(100% - 20px);
-    height: 8%;
-    aspect-ratio: 1/1;
-    margin-bottom: 20px;
+.sidemenu{
+    width:15%;
+    height:100dvh;
+    border-right:var(--border);
 }
+.logo{
+    width:100%;
+    height: 10%;
+    margin-bottom: 20px;
+    border-bottom:var(--border);
+    position: relative;
+    gap:10px;
+    padding:18px;
+}
+
 .logo_img{
-    width:100px;
+    width:24px;
+    height:24px;
+    aspect-ratio: 1/1;
 }
 .logo p{
-    font-size: 50px;
+    font-size: 30px;
     margin:0;
-    padding:10px;
     font-weight: 900;
 }
 .menu_items{
-    width:calc(100% - 22px);
+    width:calc(100% - 20px);
     height:92%;
     padding:0px;
     gap:10px;
 }
+
 .menu_items .menu_item{
     border-radius: 10px;
     padding:8px;
     list-style-type:none;
-    font-size:20px;
+    font-size:16px;
     gap:10px;
 }
-.menu_item:hover{
+.menu_item:hover ,.menu_item.active{
     background-color:transparent;
     outline:var(--border);
     backdrop-filter: blur(20px);
-    background-image: linear-gradient(180deg,rgb(255, 255, 255,0.13),rgb(0, 0, 0,0.3));
+    background:var(--menu-item-hover-color);
     border-radius: 8px;
 }
 
@@ -38,8 +49,30 @@
     width: 20px;
     height:20px;
 }
-.menu_items .menu_item   a{
+.menu_items .menu_item  a {
+    width:100%;
     text-decoration: none;
     color:var(--secondary-color);
-    /* font-weight: 400; */
+    gap:10px;
+}
+.menu_items .menu_item.active a{
+    width:100%;
+    text-decoration: none;
+    color:var(--menu-item-active-text-color);
+    gap:10px;
+}
+.menu_items .menu_item:hover  a {
+    width:100%;
+    text-decoration: none;
+    color:var(--menu-item-active-text-color);
+    gap:10px;
+}
+.menu_items .menu_item:hover  a svg path{
+    stroke:var(--menu-item-active-text-color);
+}
+.menu_items .menu_item  a svg path{
+    stroke:var(--menu-item-inactive-text-color);
+}
+.menu_items .menu_item.active  a svg path{
+    stroke:var(--menu-item-active-text-color);
 }
